# serialized

./: MANIFEST.in  README.rst  pyproject.toml
src/serialized/: __init__.py  __main__.py
src/serialized/_utils/: __init__.py
src/serialized/core/: BaseSeries.py  FrozenSeries.py  Series.py
src/serialized/tests/: __init__.py  test_0.py  test_1984.py  test_both_classes.py  test_frozen.py  test_not_frozen.py
