[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "copyable>=1.0,<2",
    "datarepr>=1.1,<2",
    "iterflat>=1.0,<2",
    "setdoc>=1.2.12,<2",
]
description = "serialized"
keywords = []
name = "serialized"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.2.1"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/serialized/#files"
Index = "https://pypi.org/project/serialized/"
Source = "https://github.com/johannes-programming/serialized/"
